fix(core): adapt java 8